--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <meta name="description" content="Vite Starter Template By Kirk Lin">
+    <title>CHERRY</title>
+    <meta name="description" content="By Lazy Turtle">
   </head>
   <body>
     <div id="app">
